<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/t_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_15"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/t_restant"
        android:layout_width="202dp"
        android:layout_height="40dp"
        android:text="@string/r_alis_0"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/b_clic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_clicks" />

    <ImageButton
        android:id="@+id/b_clic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="124dp"
        android:background="@color/cardview_shadow_end_color"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:contentDescription="@string/boutton_oeuf_pokemon"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/oeuf1"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/b_start"
        android:layout_width="103dp"
        android:layout_height="61dp"
        android:layout_marginTop="80dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_start"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/t_clicks"
        android:layout_width="202dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:text="@string/clicks_15"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/t_restant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/t_result"
        android:layout_width="202dp"
        android:layout_height="40dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="47dp"
        android:visibility="invisible"
        android:text="@string/r_sultat"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/t_clicks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_time" />

    <TextView
        android:id="@+id/t_record"
        android:layout_width="202dp"
        android:layout_height="40dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="18dp"
        android:text="@string/record_0"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/t_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_time" />

    <ImageView
        android:id="@+id/i_pokeball"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:background="@color/cardview_shadow_end_color"
        android:contentDescription="@string/pokeball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/t_time"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:srcCompat="@drawable/pokeball"
        tools:srcCompat="@drawable/pokeball" />

</androidx.constraintlayout.widget.ConstraintLayout>